networking/ingress/app.api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-api
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: app-add-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.hospitalsm.org
        - fhir.hospitalsm.org
      secretName: app-tls-secret
  rules:
    - host: api.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hsm-be-core-gateway
                port:
                  number: 3000
    - host: fhir.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hsm-be-core-gateway
                port:
                  number: 3000
