networking/ingress/app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - openrouter.hospitalsm.org
        - openrouter-2.hospitalsm.org
        - chartdb.hospitalsm.org
      secretName: app-tls-secret
  rules:
    - host: openrouter.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-openrouter
                port:
                  number: 8787
    - host: openrouter-2.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-openrouter
                port:
                  number: 8080
    - host: chartdb.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chartdb
                port:
                  number: 8080
