networking/ingress/storage.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  namespace: storage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docs.hospitalsm.org
        - minio.hospitalsm.org
        - longhorn.hospitalsm.org
      secretName: storage-tls-secret
  rules:
    - host: docs.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hsm-be-core-storage
                port:
                  number: 9000
    - host: minio.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hsm-be-core-storage
                port:
                  number: 9001
    - host: longhorn.hospitalsm.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
